src/guillex.output
Terminals unused in grammar

    DESTROYHEAD


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration
    4                | error

    5 declaration: varDeclaration
    6            | funcDeclaration

    7 varDeclaration: simpleVarDeclaration SEMIC

    8 $@1: %empty

    9 $@2: %empty

   10 funcDeclaration: TYPE ID PARENL $@1 params PARENR STFUNC $@2 stmtList ENDFUNC

   11 $@3: %empty

   12 $@4: %empty

   13 funcDeclaration: TYPE ID PARENL $@3 PARENR STFUNC $@4 stmtList ENDFUNC

   14 simpleVarDeclaration: TYPE ID

   15 params: params COMMA param
   16       | param
   17       | error

   18 param: TYPE ID

   19 compoundStmt: STFUNC stmtList ENDFUNC

   20 stmtList: stmtList primitiveStmt
   21         | primitiveStmt

   22 primitiveStmt: exprStmt
   23              | compoundStmt
   24              | condStmt
   25              | iterStmt
   26              | returnStmt
   27              | inOp
   28              | outOp
   29              | varDeclaration

   30 exprStmt: expression SEMIC

   31 condStmt: ifStmt primitiveStmt
   32         | ifStmt primitiveStmt elseStmt
   33         | ifStmt STFUNC ENDFUNC
   34         | ifStmt STFUNC ENDFUNC elseStmt

   35 ifStmt: IF PARENL simpleExp PARENR

   36 $@5: %empty

   37 elseStmt: ELSE $@5 primitiveStmt

   38 iterStmt: FOR PARENL assignExp SEMIC simpleExp SEMIC assignExp PARENR primitiveStmt
   39         | FOR PARENL simpleExp SEMIC simpleExp SEMIC assignExp PARENR primitiveStmt

   40 returnStmt: RETURN expression SEMIC

   41 expression: assignExp
   42           | simpleExp

   43 assignExp: ID ASSIGN expression

   44 simpleExp: binLogicalExp
   45          | binListExp

   46 constOp: INTEGER
   47        | DECIMAL
   48        | NIL

   49 inOp: READ PARENL ID PARENR SEMIC

   50 outOp: WRITE PARENL outConst PARENR SEMIC
   51      | WRITELN PARENL outConst PARENR SEMIC

   52 outConst: STRING
   53         | simpleExp

   54 binListExp: factor APPEND factor
   55           | factor MAP factor
   56           | factor FILTER factor

   57 unaryListExp: HEADLIST factor
   58             | TAILLIST factor

   59 binLogicalExp: binLogicalExp binLogicalOp relationalOp
   60              | relationalExp

   61 binLogicalOp: OR
   62             | AND

   63 relationalExp: relationalExp relationalOp sumExp
   64              | sumExp

   65 relationalOp: SMALLER
   66             | GREATER
   67             | SMALLEQ
   68             | GREATEQ
   69             | EQUALS
   70             | DIFFERENT

   71 sumExp: sumExp ADD mulExp
   72       | sumExp SUB mulExp
   73       | mulExp

   74 mulExp: mulExp MULT factor
   75       | mulExp DIV factor
   76       | factor
   77       | ADD factor
   78       | SUB factor
   79       | unaryListExp

   80 factor: ID
   81       | fCall
   82       | PARENL simpleExp PARENR
   83       | constOp
   84       | ERRORTOKEN

   85 fCall: ID PARENL callParams PARENR
   86      | ID PARENL PARENR

   87 callParams: callParams COMMA simpleExp
   88           | simpleExp


Terminals, with rules where they appear

    $end (0) 0
    error <treeNode> (256) 4 17
    ID <str> (258) 10 13 14 18 43 49 80 85 86
    TYPE <str> (259) 10 13 14 18
    STRING <str> (260) 52
    NIL <str> (261) 48
    INTEGER <integer> (262) 46
    DECIMAL <dec> (263) 47
    ERRORTOKEN <str> (264) 84
    ELSE <str> (265) 37
    THEN <str> (266)
    ADD <str> (267) 71 77
    SUB <str> (268) 72 78
    MULT <str> (269) 74
    DIV <str> (270) 75
    OR <str> (271) 61
    AND <str> (272) 62
    SMALLER <str> (273) 65
    GREATER <str> (274) 66
    SMALLEQ <str> (275) 67
    GREATEQ <str> (276) 68
    EQUALS <str> (277) 69
    DIFFERENT <str> (278) 70
    APPEND <str> (279) 54
    HEADLIST <str> (280) 57
    TAILLIST <str> (281) 58
    DESTROYHEAD <str> (282)
    FILTER <str> (283) 56
    ASSIGN <str> (284) 43
    MAP <str> (285) 55
    IF <str> (286) 35
    FOR <str> (287) 38 39
    READ <str> (288) 49
    WRITE <str> (289) 50
    WRITELN <str> (290) 51
    RETURN <str> (291) 40
    SEMIC <str> (292) 7 30 38 39 40 49 50 51
    COMMA <str> (293) 15 87
    STFUNC <str> (294) 10 13 19 33 34
    ENDFUNC <str> (295) 10 13 19 33 34
    PARENL <str> (296) 10 13 35 38 39 49 50 51 82 85 86
    PARENR <str> (297) 10 13 35 38 39 49 50 51 82 85 86


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program <treeNode> (44)
        on left: 1
        on right: 0
    declarationList <treeNode> (45)
        on left: 2 3 4
        on right: 1 2
    declaration <treeNode> (46)
        on left: 5 6
        on right: 2 3
    varDeclaration <treeNode> (47)
        on left: 7
        on right: 5 29
    funcDeclaration <treeNode> (48)
        on left: 10 13
        on right: 6
    $@1 (49)
        on left: 8
        on right: 10
    $@2 (50)
        on left: 9
        on right: 10
    $@3 (51)
        on left: 11
        on right: 13
    $@4 (52)
        on left: 12
        on right: 13
    simpleVarDeclaration <treeNode> (53)
        on left: 14
        on right: 7
    params <treeNode> (54)
        on left: 15 16 17
        on right: 10 15
    param <treeNode> (55)
        on left: 18
        on right: 15 16
    compoundStmt <treeNode> (56)
        on left: 19
        on right: 23
    stmtList <treeNode> (57)
        on left: 20 21
        on right: 10 13 19 20
    primitiveStmt <treeNode> (58)
        on left: 22 23 24 25 26 27 28 29
        on right: 20 21 31 32 37 38 39
    exprStmt <treeNode> (59)
        on left: 30
        on right: 22
    condStmt <treeNode> (60)
        on left: 31 32 33 34
        on right: 24
    ifStmt <treeNode> (61)
        on left: 35
        on right: 31 32 33 34
    elseStmt <treeNode> (62)
        on left: 37
        on right: 32 34
    $@5 (63)
        on left: 36
        on right: 37
    iterStmt <treeNode> (64)
        on left: 38 39
        on right: 25
    returnStmt <treeNode> (65)
        on left: 40
        on right: 26
    expression <treeNode> (66)
        on left: 41 42
        on right: 30 40 43
    assignExp <treeNode> (67)
        on left: 43
        on right: 38 39 41
    simpleExp <treeNode> (68)
        on left: 44 45
        on right: 35 38 39 42 53 82 87 88
    constOp <treeNode> (69)
        on left: 46 47 48
        on right: 83
    inOp <treeNode> (70)
        on left: 49
        on right: 27
    outOp <treeNode> (71)
        on left: 50 51
        on right: 28
    outConst <treeNode> (72)
        on left: 52 53
        on right: 50 51
    binListExp <treeNode> (73)
        on left: 54 55 56
        on right: 45
    unaryListExp <treeNode> (74)
        on left: 57 58
        on right: 79
    binLogicalExp <treeNode> (75)
        on left: 59 60
        on right: 44 59
    binLogicalOp <treeNode> (76)
        on left: 61 62
        on right: 59
    relationalExp <treeNode> (77)
        on left: 63 64
        on right: 60 63
    relationalOp <treeNode> (78)
        on left: 65 66 67 68 69 70
        on right: 59 63
    sumExp <treeNode> (79)
        on left: 71 72 73
        on right: 63 64 71 72
    mulExp <treeNode> (80)
        on left: 74 75 76 77 78 79
        on right: 71 72 73 74 75
    factor <treeNode> (81)
        on left: 80 81 82 83 84
        on right: 54 55 56 57 58 74 75 76 77 78
    fCall <treeNode> (82)
        on left: 85 86
        on right: 81
    callParams <treeNode> (83)
        on left: 87 88
        on right: 85 87


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    program               go to state 3
    declarationList       go to state 4
    declaration           go to state 5
    varDeclaration        go to state 6
    funcDeclaration       go to state 7
    simpleVarDeclaration  go to state 8


State 1

    4 declarationList: error •

    $end  reduce using rule 4 (declarationList)
    TYPE  reduce using rule 4 (declarationList)


State 2

   10 funcDeclaration: TYPE • ID PARENL $@1 params PARENR STFUNC $@2 stmtList ENDFUNC
   13                | TYPE • ID PARENL $@3 PARENR STFUNC $@4 stmtList ENDFUNC
   14 simpleVarDeclaration: TYPE • ID

    ID  shift, and go to state 9


State 3

    0 $accept: program • $end

    $end  shift, and go to state 10


State 4

    1 program: declarationList •
    2 declarationList: declarationList • declaration

    TYPE  shift, and go to state 2

    $end  reduce using rule 1 (program)

    declaration           go to state 11
    varDeclaration        go to state 6
    funcDeclaration       go to state 7
    simpleVarDeclaration  go to state 8


State 5

    3 declarationList: declaration •

    $end  reduce using rule 3 (declarationList)
    TYPE  reduce using rule 3 (declarationList)


State 6

    5 declaration: varDeclaration •

    $end  reduce using rule 5 (declaration)
    TYPE  reduce using rule 5 (declaration)


State 7

    6 declaration: funcDeclaration •

    $end  reduce using rule 6 (declaration)
    TYPE  reduce using rule 6 (declaration)


State 8

    7 varDeclaration: simpleVarDeclaration • SEMIC

    SEMIC  shift, and go to state 12


State 9

   10 funcDeclaration: TYPE ID • PARENL $@1 params PARENR STFUNC $@2 stmtList ENDFUNC
   13                | TYPE ID • PARENL $@3 PARENR STFUNC $@4 stmtList ENDFUNC
   14 simpleVarDeclaration: TYPE ID •

    PARENL  shift, and go to state 13

    SEMIC  reduce using rule 14 (simpleVarDeclaration)


State 10

    0 $accept: program $end •

    $default  accept


State 11

    2 declarationList: declarationList declaration •

    $end  reduce using rule 2 (declarationList)
    TYPE  reduce using rule 2 (declarationList)


State 12

    7 varDeclaration: simpleVarDeclaration SEMIC •

    $end  reduce using rule 7 (varDeclaration)
    TYPE  reduce using rule 7 (varDeclaration)


State 13

   10 funcDeclaration: TYPE ID PARENL • $@1 params PARENR STFUNC $@2 stmtList ENDFUNC
   13                | TYPE ID PARENL • $@3 PARENR STFUNC $@4 stmtList ENDFUNC

    error   reduce using rule 8 ($@1)
    TYPE    reduce using rule 8 ($@1)
    PARENR  reduce using rule 11 ($@3)

    $@1  go to state 14
    $@3  go to state 15


State 14

   10 funcDeclaration: TYPE ID PARENL $@1 • params PARENR STFUNC $@2 stmtList ENDFUNC

    error  shift, and go to state 16
    TYPE   shift, and go to state 17

    params  go to state 18
    param   go to state 19


State 15

   13 funcDeclaration: TYPE ID PARENL $@3 • PARENR STFUNC $@4 stmtList ENDFUNC

    PARENR  shift, and go to state 20


State 16

   17 params: error •

    COMMA   reduce using rule 17 (params)
    PARENR  reduce using rule 17 (params)


State 17

   18 param: TYPE • ID

    ID  shift, and go to state 21


State 18

   10 funcDeclaration: TYPE ID PARENL $@1 params • PARENR STFUNC $@2 stmtList ENDFUNC
   15 params: params • COMMA param

    COMMA   shift, and go to state 22
    PARENR  shift, and go to state 23


State 19

   16 params: param •

    COMMA   reduce using rule 16 (params)
    PARENR  reduce using rule 16 (params)


State 20

   13 funcDeclaration: TYPE ID PARENL $@3 PARENR • STFUNC $@4 stmtList ENDFUNC

    STFUNC  shift, and go to state 24


State 21

   18 param: TYPE ID •

    COMMA   reduce using rule 18 (param)
    PARENR  reduce using rule 18 (param)


State 22

   15 params: params COMMA • param

    TYPE  shift, and go to state 17

    param  go to state 25


State 23

   10 funcDeclaration: TYPE ID PARENL $@1 params PARENR • STFUNC $@2 stmtList ENDFUNC

    STFUNC  shift, and go to state 26


State 24

   13 funcDeclaration: TYPE ID PARENL $@3 PARENR STFUNC • $@4 stmtList ENDFUNC

    ID          reduce using rule 12 ($@4)
    TYPE        reduce using rule 12 ($@4)
    NIL         reduce using rule 12 ($@4)
    INTEGER     reduce using rule 12 ($@4)
    DECIMAL     reduce using rule 12 ($@4)
    ERRORTOKEN  reduce using rule 12 ($@4)
    ADD         reduce using rule 12 ($@4)
    SUB         reduce using rule 12 ($@4)
    HEADLIST    reduce using rule 12 ($@4)
    TAILLIST    reduce using rule 12 ($@4)
    IF          reduce using rule 12 ($@4)
    FOR         reduce using rule 12 ($@4)
    READ        reduce using rule 12 ($@4)
    WRITE       reduce using rule 12 ($@4)
    WRITELN     reduce using rule 12 ($@4)
    RETURN      reduce using rule 12 ($@4)
    STFUNC      reduce using rule 12 ($@4)
    PARENL      reduce using rule 12 ($@4)

    $@4  go to state 27


State 25

   15 params: params COMMA param •

    COMMA   reduce using rule 15 (params)
    PARENR  reduce using rule 15 (params)


State 26

   10 funcDeclaration: TYPE ID PARENL $@1 params PARENR STFUNC • $@2 stmtList ENDFUNC

    ID          reduce using rule 9 ($@2)
    TYPE        reduce using rule 9 ($@2)
    NIL         reduce using rule 9 ($@2)
    INTEGER     reduce using rule 9 ($@2)
    DECIMAL     reduce using rule 9 ($@2)
    ERRORTOKEN  reduce using rule 9 ($@2)
    ADD         reduce using rule 9 ($@2)
    SUB         reduce using rule 9 ($@2)
    HEADLIST    reduce using rule 9 ($@2)
    TAILLIST    reduce using rule 9 ($@2)
    IF          reduce using rule 9 ($@2)
    FOR         reduce using rule 9 ($@2)
    READ        reduce using rule 9 ($@2)
    WRITE       reduce using rule 9 ($@2)
    WRITELN     reduce using rule 9 ($@2)
    RETURN      reduce using rule 9 ($@2)
    STFUNC      reduce using rule 9 ($@2)
    PARENL      reduce using rule 9 ($@2)

    $@2  go to state 28


State 27

   13 funcDeclaration: TYPE ID PARENL $@3 PARENR STFUNC $@4 • stmtList ENDFUNC

    ID          shift, and go to state 29
    TYPE        shift, and go to state 30
    NIL         shift, and go to state 31
    INTEGER     shift, and go to state 32
    DECIMAL     shift, and go to state 33
    ERRORTOKEN  shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    HEADLIST    shift, and go to state 37
    TAILLIST    shift, and go to state 38
    IF          shift, and go to state 39
    FOR         shift, and go to state 40
    READ        shift, and go to state 41
    WRITE       shift, and go to state 42
    WRITELN     shift, and go to state 43
    RETURN      shift, and go to state 44
    STFUNC      shift, and go to state 45
    PARENL      shift, and go to state 46

    varDeclaration        go to state 47
    simpleVarDeclaration  go to state 164
    compoundStmt          go to state 48
    stmtList              go to state 49
    primitiveStmt         go to state 50
    exprStmt              go to state 51
    condStmt              go to state 52
    ifStmt                go to state 53
    iterStmt              go to state 54
    returnStmt            go to state 55
    expression            go to state 56
    assignExp             go to state 57
    simpleExp             go to state 58
    constOp               go to state 59
    inOp                  go to state 60
    outOp                 go to state 61
    binListExp            go to state 62
    unaryListExp          go to state 63
    binLogicalExp         go to state 64
    relationalExp         go to state 65
    sumExp                go to state 66
    mulExp                go to state 67
    factor                go to state 68
    fCall                 go to state 69


State 28

   10 funcDeclaration: TYPE ID PARENL $@1 params PARENR STFUNC $@2 • stmtList ENDFUNC

    ID          shift, and go to state 29
    TYPE        shift, and go to state 30
    NIL         shift, and go to state 31
    INTEGER     shift, and go to state 32
    DECIMAL     shift, and go to state 33
    ERRORTOKEN  shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    HEADLIST    shift, and go to state 37
    TAILLIST    shift, and go to state 38
    IF          shift, and go to state 39
    FOR         shift, and go to state 40
    READ        shift, and go to state 41
    WRITE       shift, and go to state 42
    WRITELN     shift, and go to state 43
    RETURN      shift, and go to state 44
    STFUNC      shift, and go to state 45
    PARENL      shift, and go to state 46

    varDeclaration        go to state 47
    simpleVarDeclaration  go to state 164
    compoundStmt          go to state 48
    stmtList              go to state 70
    primitiveStmt         go to state 50
    exprStmt              go to state 51
    condStmt              go to state 52
    ifStmt                go to state 53
    iterStmt              go to state 54
    returnStmt            go to state 55
    expression            go to state 56
    assignExp             go to state 57
    simpleExp             go to state 58
    constOp               go to state 59
    inOp                  go to state 60
    outOp                 go to state 61
    binListExp            go to state 62
    unaryListExp          go to state 63
    binLogicalExp         go to state 64
    relationalExp         go to state 65
    sumExp                go to state 66
    mulExp                go to state 67
    factor                go to state 68
    fCall                 go to state 69


State 29

   43 assignExp: ID • ASSIGN expression
   80 factor: ID •
   85 fCall: ID • PARENL callParams PARENR
   86      | ID • PARENL PARENR

    ASSIGN  shift, and go to state 71
    PARENL  shift, and go to state 72

    ADD        reduce using rule 80 (factor)
    SUB        reduce using rule 80 (factor)
    MULT       reduce using rule 80 (factor)
    DIV        reduce using rule 80 (factor)
    OR         reduce using rule 80 (factor)
    AND        reduce using rule 80 (factor)
    SMALLER    reduce using rule 80 (factor)
    GREATER    reduce using rule 80 (factor)
    SMALLEQ    reduce using rule 80 (factor)
    GREATEQ    reduce using rule 80 (factor)
    EQUALS     reduce using rule 80 (factor)
    DIFFERENT  reduce using rule 80 (factor)
    APPEND     reduce using rule 80 (factor)
    FILTER     reduce using rule 80 (factor)
    MAP        reduce using rule 80 (factor)
    SEMIC      reduce using rule 80 (factor)


State 30

   14 simpleVarDeclaration: TYPE • ID

    ID  shift, and go to state 73


State 31

   48 constOp: NIL •

    ADD        reduce using rule 48 (constOp)
    SUB        reduce using rule 48 (constOp)
    MULT       reduce using rule 48 (constOp)
    DIV        reduce using rule 48 (constOp)
    OR         reduce using rule 48 (constOp)
    AND        reduce using rule 48 (constOp)
    SMALLER    reduce using rule 48 (constOp)
    GREATER    reduce using rule 48 (constOp)
    SMALLEQ    reduce using rule 48 (constOp)
    GREATEQ    reduce using rule 48 (constOp)
    EQUALS     reduce using rule 48 (constOp)
    DIFFERENT  reduce using rule 48 (constOp)
    APPEND     reduce using rule 48 (constOp)
    FILTER     reduce using rule 48 (constOp)
    MAP        reduce using rule 48 (constOp)
    SEMIC      reduce using rule 48 (constOp)


State 32

   46 constOp: INTEGER •

    ADD        reduce using rule 46 (constOp)
    SUB        reduce using rule 46 (constOp)
    MULT       reduce using rule 46 (constOp)
    DIV        reduce using rule 46 (constOp)
    OR         reduce using rule 46 (constOp)
    AND        reduce using rule 46 (constOp)
    SMALLER    reduce using rule 46 (constOp)
    GREATER    reduce using rule 46 (constOp)
    SMALLEQ    reduce using rule 46 (constOp)
    GREATEQ    reduce using rule 46 (constOp)
    EQUALS     reduce using rule 46 (constOp)
    DIFFERENT  reduce using rule 46 (constOp)
    APPEND     reduce using rule 46 (constOp)
    FILTER     reduce using rule 46 (constOp)
    MAP        reduce using rule 46 (constOp)
    SEMIC      reduce using rule 46 (constOp)


State 33

   47 constOp: DECIMAL •

    ADD        reduce using rule 47 (constOp)
    SUB        reduce using rule 47 (constOp)
    MULT       reduce using rule 47 (constOp)
    DIV        reduce using rule 47 (constOp)
    OR         reduce using rule 47 (constOp)
    AND        reduce using rule 47 (constOp)
    SMALLER    reduce using rule 47 (constOp)
    GREATER    reduce using rule 47 (constOp)
    SMALLEQ    reduce using rule 47 (constOp)
    GREATEQ    reduce using rule 47 (constOp)
    EQUALS     reduce using rule 47 (constOp)
    DIFFERENT  reduce using rule 47 (constOp)
    APPEND     reduce using rule 47 (constOp)
    FILTER     reduce using rule 47 (constOp)
    MAP        reduce using rule 47 (constOp)
    SEMIC      reduce using rule 47 (constOp)


State 34

   84 factor: ERRORTOKEN •

    ADD        reduce using rule 84 (factor)
    SUB        reduce using rule 84 (factor)
    MULT       reduce using rule 84 (factor)
    DIV        reduce using rule 84 (factor)
    OR         reduce using rule 84 (factor)
    AND        reduce using rule 84 (factor)
    SMALLER    reduce using rule 84 (factor)
    GREATER    reduce using rule 84 (factor)
    SMALLEQ    reduce using rule 84 (factor)
    GREATEQ    reduce using rule 84 (factor)
    EQUALS     reduce using rule 84 (factor)
    DIFFERENT  reduce using rule 84 (factor)
    APPEND     reduce using rule 84 (factor)
    FILTER     reduce using rule 84 (factor)
    MAP        reduce using rule 84 (factor)
    SEMIC      reduce using rule 84 (factor)


State 35

   77 mulExp: ADD • factor

    ID          shift, and go to state 74
    NIL         shift, and go to state 165
    INTEGER     shift, and go to state 166
    DECIMAL     shift, and go to state 167
    ERRORTOKEN  shift, and go to state 168
    PARENL      shift, and go to state 169

    constOp  go to state 170
    factor   go to state 75
    fCall    go to state 171


State 36

   78 mulExp: SUB • factor

    ID          shift, and go to state 74
    NIL         shift, and go to state 165
    INTEGER     shift, and go to state 166
    DECIMAL     shift, and go to state 167
    ERRORTOKEN  shift, and go to state 168
    PARENL      shift, and go to state 169

    constOp  go to state 170
    factor   go to state 76
    fCall    go to state 171


State 37

   57 unaryListExp: HEADLIST • factor

    ID          shift, and go to state 74
    NIL         shift, and go to state 165
    INTEGER     shift, and go to state 166
    DECIMAL     shift, and go to state 167
    ERRORTOKEN  shift, and go to state 168
    PARENL      shift, and go to state 169

    constOp  go to state 170
    factor   go to state 77
    fCall    go to state 171


State 38

   58 unaryListExp: TAILLIST • factor

    ID          shift, and go to state 74
    NIL         shift, and go to state 165
    INTEGER     shift, and go to state 166
    DECIMAL     shift, and go to state 167
    ERRORTOKEN  shift, and go to state 168
    PARENL      shift, and go to state 169

    constOp  go to state 170
    factor   go to state 78
    fCall    go to state 171


State 39

   35 ifStmt: IF • PARENL simpleExp PARENR

    PARENL  shift, and go to state 79


State 40

   38 iterStmt: FOR • PARENL assignExp SEMIC simpleExp SEMIC assignExp PARENR primitiveStmt
   39         | FOR • PARENL simpleExp SEMIC simpleExp SEMIC assignExp PARENR primitiveStmt

    PARENL  shift, and go to state 80


State 41

   49 inOp: READ • PARENL ID PARENR SEMIC

    PARENL  shift, and go to state 81


State 42

   50 outOp: WRITE • PARENL outConst PARENR SEMIC

    PARENL  shift, and go to state 82


State 43

   51 outOp: WRITELN • PARENL outConst PARENR SEMIC

    PARENL  shift, and go to state 83


State 44

   40 returnStmt: RETURN • expression SEMIC

    ID          shift, and go to state 29
    NIL         shift, and go to state 31
    INTEGER     shift, and go to state 32
    DECIMAL     shift, and go to state 33
    ERRORTOKEN  shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    HEADLIST    shift, and go to state 37
    TAILLIST    shift, and go to state 38
    PARENL      shift, and go to state 46

    expression     go to state 84
    assignExp      go to state 57
    simpleExp      go to state 58
    constOp        go to state 59
    binListExp     go to state 62
    unaryListExp   go to state 63
    binLogicalExp  go to state 64
    relationalExp  go to state 65
    sumExp         go to state 66
    mulExp         go to state 67
    factor         go to state 68
    fCall          go to state 69


State 45

   19 compoundStmt: STFUNC • stmtList ENDFUNC

    ID          shift, and go to state 29
    TYPE        shift, and go to state 30
    NIL         shift, and go to state 31
    INTEGER     shift, and go to state 32
    DECIMAL     shift, and go to state 33
    ERRORTOKEN  shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    HEADLIST    shift, and go to state 37
    TAILLIST    shift, and go to state 38
    IF          shift, and go to state 39
    FOR         shift, and go to state 40
    READ        shift, and go to state 41
    WRITE       shift, and go to state 42
    WRITELN     shift, and go to state 43
    RETURN      shift, and go to state 44
    STFUNC      shift, and go to state 45
    PARENL      shift, and go to state 46

    varDeclaration        go to state 47
    simpleVarDeclaration  go to state 164
    compoundStmt          go to state 48
    stmtList              go to state 85
    primitiveStmt         go to state 50
    exprStmt              go to state 51
    condStmt              go to state 52
    ifStmt                go to state 53
    iterStmt              go to state 54
    returnStmt            go to state 55
    expression            go to state 56
    assignExp             go to state 57
    simpleExp             go to state 58
    constOp               go to state 59
    inOp                  go to state 60
    outOp                 go to state 61
    binListExp            go to state 62
    unaryListExp          go to state 63
    binLogicalExp         go to state 64
    relationalExp         go to state 65
    sumExp                go to state 66
    mulExp                go to state 67
    factor                go to state 68
    fCall                 go to state 69


State 46

   82 factor: PARENL • simpleExp PARENR

    ID          shift, and go to state 172
    NIL         shift, and go to state 173
    INTEGER     shift, and go to state 174
    DECIMAL     shift, and go to state 175
    ERRORTOKEN  shift, and go to state 176
    ADD         shift, and go to state 177
    SUB         shift, and go to state 178
    HEADLIST    shift, and go to state 179
    TAILLIST    shift, and go to state 180
    PARENL      shift, and go to state 181

    simpleExp      go to state 86
    constOp        go to state 182
    binListExp     go to state 183
    unaryListExp   go to state 184
    binLogicalExp  go to state 185
    relationalExp  go to state 186
    sumExp         go to state 187
    mulExp         go to state 188
    factor         go to state 189
    fCall          go to state 190


State 47

   29 primitiveStmt: varDeclaration •

    ID          reduce using rule 29 (primitiveStmt)
    TYPE        reduce using rule 29 (primitiveStmt)
    NIL         reduce using rule 29 (primitiveStmt)
    INTEGER     reduce using rule 29 (primitiveStmt)
    DECIMAL     reduce using rule 29 (primitiveStmt)
    ERRORTOKEN  reduce using rule 29 (primitiveStmt)
    ADD         reduce using rule 29 (primitiveStmt)
    SUB         reduce using rule 29 (primitiveStmt)
    HEADLIST    reduce using rule 29 (primitiveStmt)
    TAILLIST    reduce using rule 29 (primitiveStmt)
    IF          reduce using rule 29 (primitiveStmt)
    FOR         reduce using rule 29 (primitiveStmt)
    READ        reduce using rule 29 (primitiveStmt)
    WRITE       reduce using rule 29 (primitiveStmt)
    WRITELN     reduce using rule 29 (primitiveStmt)
    RETURN      reduce using rule 29 (primitiveStmt)
    STFUNC      reduce using rule 29 (primitiveStmt)
    ENDFUNC     reduce using rule 29 (primitiveStmt)
    PARENL      reduce using rule 29 (primitiveStmt)


State 48

   23 primitiveStmt: compoundStmt •

    ID          reduce using rule 23 (primitiveStmt)
    TYPE        reduce using rule 23 (primitiveStmt)
    NIL         reduce using rule 23 (primitiveStmt)
    INTEGER     reduce using rule 23 (primitiveStmt)
    DECIMAL     reduce using rule 23 (primitiveStmt)
    ERRORTOKEN  reduce using rule 23 (primitiveStmt)
    ADD         reduce using rule 23 (primitiveStmt)
    SUB         reduce using rule 23 (primitiveStmt)
    HEADLIST    reduce using rule 23 (primitiveStmt)
    TAILLIST    reduce using rule 23 (primitiveStmt)
    IF          reduce using rule 23 (primitiveStmt)
    FOR         reduce using rule 23 (primitiveStmt)
    READ        reduce using rule 23 (primitiveStmt)
    WRITE       reduce using rule 23 (primitiveStmt)
    WRITELN     reduce using rule 23 (primitiveStmt)
    RETURN      reduce using rule 23 (primitiveStmt)
    STFUNC      reduce using rule 23 (primitiveStmt)
    ENDFUNC     reduce using rule 23 (primitiveStmt)
    PARENL      reduce using rule 23 (primitiveStmt)


State 49

   13 funcDeclaration: TYPE ID PARENL $@3 PARENR STFUNC $@4 stmtList • ENDFUNC
   20 stmtList: stmtList • primitiveStmt

    ID          shift, and go to state 29
    TYPE        shift, and go to state 30
    NIL         shift, and go to state 31
    INTEGER     shift, and go to state 32
    DECIMAL     shift, and go to state 33
    ERRORTOKEN  shift, and go to state 34
    ADD         shift, and go to state 35
    SUB         shift, and go to state 36
    HEADLIST    shift, and go to state 37
    TAILLIST    shift, and go to state 38
    IF          shift, and go to state 39
    FOR         shift, and go to state 40
    READ        shift, and go to state 41
    WRITE       shift, and go to state 42
    WRITELN     shift, and go to state 43
    RETURN      shift, and go to state 44
    STFUNC      shift, and go to state 45
    ENDFUNC     shift, and go to state 87
    PARENL      shift, and go to state 46

    varDeclaration        go to state 47
    simpleVarDeclaration  go to state 164
    compoundStmt          go to state 48
    primitiveStmt         go to state 88
    exprStmt              go to state 51
    condStmt              go to state 52
    ifStmt                go to state 53
    iterStmt              go to state 54
    returnStmt            go to state 55
    expression            go to state 56
    assignExp             go to state 57
    simpleExp             go to state 58
    constOp               go to state 59
    inOp                  go to state 60
    outOp                 go to state 61
    binListExp            go to state 62
    unaryListExp          go to state 63
    binLogicalExp         go to state 64
    relationalExp         go to state 65
    sumExp                go to state 66
    mulExp                go to state 67
    factor                go to state 68
    fCall                 go to state 69


State 50

   21 stmtList: primitiveStmt •

    ID          reduce using rule 21 (stmtList)
    TYPE        reduce using rule 21 (stmtList)
    NIL         reduce using rule 21 (stmtList)
    INTEGER     reduce using rule 21 (stmtList)
    DECIMAL     reduce using rule 21 (stmtList)
    ERRORTOKEN  reduce using rule 21 (stmtList)
    ADD         reduce using rule 21 (stmtList)
    SUB         reduce using rule 21 (stmtList)
    HEADLIST    reduce using rule 21 (stmtList)
    TAILLIST    reduce using rule 21 (stmtList)
    IF          reduce using rule 21 (stmtList)
    FOR         reduce using rule 21 (stmtList)
    READ        reduce using rule 21 (stmtList)
    WRITE       reduce using rule 21 (stmtList)
    WRITELN     reduce using rule 21 (stmtList)
    RETURN      reduce using rule 21 (stmtList)
    STFUNC      reduce using rule 21 (stmtList)
    ENDFUNC     reduce using rule 21 (stmtList)
    PARENL      reduce using rule 21 (stmtList)


State 51

   22 primitiveStmt: exprStmt •

    ID          reduce using rule 22 (primitiveStmt)
    TYPE        reduce using rule 22 (primitiveStmt)
    NIL         reduce using rule 22 (primitiveStmt)
    INTEGER     reduce using rule 22 (primitiveStmt)
    DECIMAL     reduce using rule 22 (primitiveStmt)
    ERRORTOKEN  reduce using rule 22 (primitiveStmt)
    ADD         reduce using rule 22 (primitiveStmt)
    SUB         reduce using rule 22 (primitiveStmt)
    HEADLIST    reduce using rule 22 (primitiveStmt)
    TAILLIST    reduce using rule 22 (primitiveStmt)
    IF          reduce using rule 22 (primitiveStmt)
    FOR         reduce using rule 22 (primitiveStmt)
    READ        reduce using rule 22 (primitiveStmt)
    WRITE       reduce using rule 22 (primitiveStmt)
    WRITELN     reduce using rule 22 (primitiveStmt)
    RETURN      reduce using rule 22 (primitiveStmt)
    STFUNC      reduce using rule 22 (primitiveStmt)
    ENDFUNC     reduce using rule 22 (primitiveStmt)
    PARENL      reduce using rule 22 (primitiveStmt)


State 52

   24 primitiveStmt: condStmt •
